refactor: class reflection newInstance is deprecated in Java 9.